# srvstats

./: CMakeLists.txt  LICENSE  README.md
src/: cpu.h  index.cpp  index.h  index.html  main.cpp  utils.cpp  utils.h
